--- a/DDAYGO/ViewController/My/Supplier/Supplier1ViewController.xib
+++ b/DDAYGO/ViewController/My/Supplier/Supplier1ViewController.xib
@@ -118,10 +118,10 @@
                             <nil key="highlightedColor"/>
                         </label>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OCf-Qe-LaU">
-                            <rect key="frame" x="20" y="411" width="280" height="30"/>
+                            <rect key="frame" x="20" y="411" width="280" height="35"/>
                             <color key="backgroundColor" red="1" green="0.57810515169999999" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <constraints>
-                                <constraint firstAttribute="height" constant="30" id="phb-wY-RcW"/>
+                                <constraint firstAttribute="height" constant="35" id="phb-wY-RcW"/>
                             </constraints>
                             <state key="normal" title="重新申请">
                                 <color key="titleColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -136,7 +136,7 @@
                         <constraint firstItem="OCf-Qe-LaU" firstAttribute="leading" secondItem="oiP-Bo-vtV" secondAttribute="leading" constant="20" id="2s8-cc-I9M"/>
                         <constraint firstItem="Fkq-VJ-6Bx" firstAttribute="top" secondItem="FIE-Cf-npt" secondAttribute="bottom" constant="8" id="HNX-Nh-MPK"/>
                         <constraint firstItem="Fkq-VJ-6Bx" firstAttribute="centerX" secondItem="FIE-Cf-npt" secondAttribute="centerX" id="Ian-Z3-ggH"/>
-                        <constraint firstItem="OCf-Qe-LaU" firstAttribute="centerY" secondItem="oiP-Bo-vtV" secondAttribute="centerY" multiplier="1.5" id="R85-wd-3mn"/>
+                        <constraint firstItem="OCf-Qe-LaU" firstAttribute="centerY" secondItem="oiP-Bo-vtV" secondAttribute="centerY" multiplier="1.5" constant="2.5" id="R85-wd-3mn"/>
                         <constraint firstAttribute="trailing" secondItem="OCf-Qe-LaU" secondAttribute="trailing" constant="20" id="r4X-Vs-dUr"/>
                         <constraint firstItem="FIE-Cf-npt" firstAttribute="centerX" secondItem="oiP-Bo-vtV" secondAttribute="centerX" id="suu-0v-lxv"/>
                         <constraint firstItem="FIE-Cf-npt" firstAttribute="centerY" secondItem="oiP-Bo-vtV" secondAttribute="centerY" multiplier="0.5" id="xwN-Pt-xyF"/>
