--- a/DDAYGO/ViewController/My/Collect/Cell/CollectionTableViewCell.xib
+++ b/DDAYGO/ViewController/My/Collect/Cell/CollectionTableViewCell.xib
@@ -92,6 +92,16 @@
                             <constraint firstAttribute="width" constant="92" id="rRJ-0R-3XU"/>
                         </constraints>
                     </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ey6-EQ-Rg4">
+                        <rect key="frame" x="33" y="40" width="42" height="15"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="15" id="0Mb-R2-qoN"/>
+                            <constraint firstAttribute="width" constant="42" id="kGg-Ne-HXP"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
                     <constraint firstItem="nSL-kj-gLK" firstAttribute="top" secondItem="A0p-VQ-TKJ" secondAttribute="bottom" constant="26" id="0pi-rJ-mJ9"/>
@@ -104,6 +114,7 @@
                     <constraint firstAttribute="trailing" secondItem="UlF-Tk-dWI" secondAttribute="trailing" constant="10" id="CeT-Zk-tcj"/>
                     <constraint firstItem="NhN-r3-pHL" firstAttribute="leading" secondItem="sgc-ol-QRs" secondAttribute="leading" constant="8" id="HIj-mQ-kWf"/>
                     <constraint firstItem="UlF-Tk-dWI" firstAttribute="top" secondItem="sgc-ol-QRs" secondAttribute="top" constant="8" id="J88-R6-FRc"/>
+                    <constraint firstItem="ey6-EQ-Rg4" firstAttribute="top" secondItem="sgc-ol-QRs" secondAttribute="topMargin" constant="29" id="NTW-M1-W39"/>
                     <constraint firstItem="NhN-r3-pHL" firstAttribute="centerY" secondItem="sgc-ol-QRs" secondAttribute="centerY" id="Osb-Ee-97X"/>
                     <constraint firstItem="DYA-FP-Cd3" firstAttribute="top" secondItem="UlF-Tk-dWI" secondAttribute="bottom" constant="2" id="Q0z-YK-tfb"/>
                     <constraint firstItem="A0p-VQ-TKJ" firstAttribute="leading" secondItem="otV-Dq-b6g" secondAttribute="trailing" constant="-2" id="VKK-UT-x0w"/>
@@ -114,6 +125,7 @@
                     <constraint firstItem="vFh-Ip-qIP" firstAttribute="leading" secondItem="sgc-ol-QRs" secondAttribute="leading" constant="8" id="gfO-ct-2ia"/>
                     <constraint firstItem="yDF-sZ-3mY" firstAttribute="leading" secondItem="DYA-FP-Cd3" secondAttribute="trailing" constant="3" id="gqG-R7-fAV"/>
                     <constraint firstAttribute="bottom" secondItem="nSL-kj-gLK" secondAttribute="bottom" id="tNa-wN-ivl"/>
+                    <constraint firstItem="ey6-EQ-Rg4" firstAttribute="centerX" secondItem="vFh-Ip-qIP" secondAttribute="centerX" id="tiB-YD-OiI"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
@@ -123,6 +135,7 @@
                 <outlet property="priceLabel" destination="yDF-sZ-3mY" id="L0P-SS-Zrb"/>
                 <outlet property="shopTextLabel" destination="UlF-Tk-dWI" id="dVg-9O-Tjd"/>
                 <outlet property="showYImageVIew" destination="vFh-Ip-qIP" id="Jzd-n5-U2Z"/>
+                <outlet property="zhuangtaiLabel" destination="ey6-EQ-Rg4" id="gvk-4V-tSz"/>
             </connections>
             <point key="canvasLocation" x="13" y="52"/>
         </tableViewCell>
