--- a/DDAYGO/ViewController/Logregister/ZP_QuickLogin/ZP_QuickLoginHomePage/ZP_QuickLoginController.xib
+++ b/DDAYGO/ViewController/Logregister/ZP_QuickLogin/ZP_QuickLoginHomePage/ZP_QuickLoginController.xib
@@ -112,6 +112,9 @@
                                     </fragment>
                                 </attributedString>
                             </state>
+                            <connections>
+                                <action selector="yonghufuwuxieyi:" destination="-1" eventType="touchUpInside" id="sJC-0z-g2e"/>
+                            </connections>
                         </button>
                     </subviews>
                     <constraints>
