--- a/DDAYGO/ViewController/My/Collect/Cell/CollectionTableViewCell.xib
+++ b/DDAYGO/ViewController/My/Collect/Cell/CollectionTableViewCell.xib
@@ -42,8 +42,8 @@
                         <color key="textColor" red="0.098039217289999994" green="0.098039217289999994" blue="0.098039217289999994" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="RMB" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DYA-FP-Cd3">
-                        <rect key="frame" x="108" y="58" width="26.5" height="15"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="NT" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DYA-FP-Cd3">
+                        <rect key="frame" x="108" y="58" width="17" height="15"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="15" id="3Fk-Tw-HfL"/>
                         </constraints>
@@ -52,7 +52,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="30000" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yDF-sZ-3mY">
-                        <rect key="frame" x="137.5" y="58" width="38" height="15"/>
+                        <rect key="frame" x="128" y="58" width="38" height="15"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="15" id="2bm-g8-D2C"/>
                         </constraints>
